--- a/App.axaml
+++ b/App.axaml
@@ -1,6 +1,7 @@
 <Application xmlns="https://github.com/avaloniaui"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              x:Class="VibeNine.App"
+             xmlns:materialIcons="clr-namespace:Material.Icons.Avalonia;assembly=Material.Icons.Avalonia"
              xmlns:local="using:VibeNine"
              RequestedThemeVariant="Dark">
     <!-- "Default" ThemeVariant follows system theme variant. "Dark" or "Light" are other available options. -->
@@ -11,6 +12,6 @@
 
     <Application.Styles>
         <FluentTheme />
-        <StyleInclude Source="avares://Material.Icons.Avalonia/App.xaml" />
+        <materialIcons:MaterialIconStyles />
     </Application.Styles>
 </Application>
