reworked navigation to use the reactive router, and stateful navigation.

--- a/Views/HomePageView.axaml
+++ b/Views/HomePageView.axaml
@@ -130,5 +130,8 @@
             </Border>
         </Panel>
         <!-- END PANEL 2 -->
+        <TextBlock x:Name="PathTextBlock" Foreground="White"
+                   Text="{Binding UrlPathSegment}" />
+
     </WrapPanel>
 </UserControl>
