--- a/Views/MainWindow.axaml
+++ b/Views/MainWindow.axaml
@@ -4,6 +4,7 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:avalonia="clr-namespace:Material.Icons.Avalonia;assembly=Material.Icons.Avalonia"
+        xmlns:reactiveUi="http://reactiveui.net"
         mc:Ignorable="d" d:DesignWidth="700" d:DesignHeight="400"
         x:Class="VibeNine.Views.MainWindow"
         x:DataType="vm:MainWindowViewModel"
@@ -47,7 +48,7 @@
                     <Border BorderBrush="DimGray" Opacity=".3" BorderThickness="1" />
 
                     <Button Width="200" Background="Transparent"
-                            Command="{Binding NavigateHomeCommand}">
+                            Command="{Binding NavigateToHomeScreen}">
                         <Button.Content>
                             <StackPanel Orientation="Horizontal">
                                 <avalonia:MaterialIcon Kind="Gauge"
@@ -60,7 +61,7 @@
                         </Button.Content>
                     </Button>
                     <Button Width="200" Background="Transparent"
-                            Command="{Binding NavigateOperationsCommand}">
+                            Command="{Binding NavigateToOperations}">
                         <Button.Content>
                             <StackPanel Orientation="Horizontal">
                                 <avalonia:MaterialIcon Kind="Apps"
@@ -77,19 +78,22 @@
                 <!-- END NAV PANE -->
             </SplitView.Pane>
             <!-- SPLITVIEW CONTENT AREA -->
-            <SplitView.Content>
-                <Grid>
-                    <ProgressBar Margin="0 10" Height="30"
-                                 Minimum="0" Maximum="100" Value="{Binding ProgressPercent}"
-                                 ShowProgressText="True"  VerticalAlignment="Center"
-                                 HorizontalAlignment="Center"
-                                 IsVisible="{Binding ProgressVisible}"/>
-                    
-                    <ContentControl x:Name="ContentControlLoader"
-                                    IsVisible="{Binding ContentVisible}"
-                                    Content="{Binding CurrentPage}" />
-                </Grid>
-            </SplitView.Content>
+            <reactiveUi:RoutedViewHost
+                x:Name="RoutedViewHost" Router="{Binding Router}">
+            </reactiveUi:RoutedViewHost>
+            <!-- <SplitView.Content> -->
+            <!--     <Grid> -->
+            <!--         <ProgressBar Margin="0 10" Height="30" -->
+            <!--                      Minimum="0" Maximum="100" Value="{Binding ProgressPercent}" -->
+            <!--                      ShowProgressText="True"  VerticalAlignment="Center" -->
+            <!--                      HorizontalAlignment="Center" -->
+            <!--                      IsVisible="{Binding ProgressVisible}"/> -->
+            <!--          -->
+            <!--         <ContentControl x:Name="ContentControlLoader" -->
+            <!--                         IsVisible="{Binding ContentVisible}" -->
+            <!--                         Content="" /> -->
+            <!--     </Grid> -->
+            <!-- </SplitView.Content> -->
             <!-- END SPLITVIEW CONTENT-->
         </SplitView>
     </Panel>
