Handle the tank details routing.

--- a/Views/TankDetailsView.axaml
+++ b/Views/TankDetailsView.axaml
@@ -3,6 +3,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:viewModels="clr-namespace:VibeNine.ViewModels"
+             xmlns:avalonia="clr-namespace:Material.Icons.Avalonia;assembly=Material.Icons.Avalonia"
              x:DataType="viewModels:TankDetailsViewModel"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
              x:Class="VibeNine.Views.TankDetailsView">
@@ -13,6 +14,14 @@
     
     <StackPanel HorizontalAlignment="Center"
                 VerticalAlignment="Center" >
+        <Button  Command="{Binding NavigateBackwardsFromTankDetails}">
+            <Button.Content>
+                <avalonia:MaterialIcon
+                    Kind="Backburger"
+                    Width="30"
+                    Height="30" />
+            </Button.Content>
+        </Button>
         <TextBlock Text="Welcome to the tank details"></TextBlock>
     </StackPanel>
 </UserControl>
