--- a/Views/HomePageView.axaml
+++ b/Views/HomePageView.axaml
@@ -2,10 +2,10 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             xmlns:viewModels="clr-namespace:VibeNine.ViewModels"
+             xmlns:viewModels="clr-namespace:VibeOne.ViewModels"
              xmlns:avalonia="clr-namespace:Material.Icons.Avalonia;assembly=Material.Icons.Avalonia"
              mc:Ignorable="d" d:DesignWidth="740" d:DesignHeight="400"
-             x:Class="VibeNine.Views.HomePageView"
+             x:Class="VibeOne.Views.HomePageView"
              x:DataType="viewModels:HomePageViewModel">
 
     <Design.DataContext>
