--- a/Views/TankDetailsView.axaml
+++ b/Views/TankDetailsView.axaml
@@ -2,31 +2,44 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             xmlns:viewModels="clr-namespace:VibeNine.ViewModels"
+             xmlns:viewModels="clr-namespace:VibeOne.ViewModels"
              xmlns:avalonia="clr-namespace:Material.Icons.Avalonia;assembly=Material.Icons.Avalonia"
              x:DataType="viewModels:TankDetailsViewModel"
-             mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
-             x:Class="VibeNine.Views.TankDetailsView">
+             mc:Ignorable="d" d:DesignWidth="700" d:DesignHeight="400"
+             x:Class="VibeOne.Views.TankDetailsView">
 
     <Design.DataContext>
         <viewModels:TankDetailsViewModel />
     </Design.DataContext>
-    
+
     <StackPanel Orientation="Vertical">
-        <StackPanel Orientation="Horizontal" VerticalAlignment="Center">
-            <Button  Command="{Binding NavigateBackwardsFromTankDetails}">
+        <Grid ColumnDefinitions="Auto, *">
+            <Button
+                Width="65"
+                Height="40"
+                Command="{Binding NavigateBackwardsFromTankDetails}">
                 <Button.Content>
-                    <avalonia:MaterialIcon
-                        Kind="ArrowBack" 
-                        Width="30"
-                        Height="30" />
+                    <StackPanel Orientation="Horizontal">
+                        <avalonia:MaterialIcon
+                            Kind="ArrowBack"
+                            Width="22"
+                            Height="50" />
+                    </StackPanel>
                 </Button.Content>
             </Button>
-            <TextBlock VerticalAlignment="Center" Text=" Return" />
+            <TextBlock Grid.Column="1" Margin="-65,0,0,0"
+                       VerticalAlignment="Center"
+                       HorizontalAlignment="Center"
+                       Foreground="Gainsboro"
+                       FontSize="20"
+                       FontFamily="Verdana"
+                       FontWeight="Black"
+                       Text="Details" />
+        </Grid>
+        <StackPanel Orientation="Horizontal"  HorizontalAlignment="Center">
+            
         </StackPanel>
-       
-        
     </StackPanel>
-    
-    
+
+
 </UserControl>
