--- a/Views/HomePageView.axaml
+++ b/Views/HomePageView.axaml
@@ -13,7 +13,7 @@
     </Design.DataContext>
 
     <WrapPanel Orientation="Horizontal">
-        <Button Background="Transparent" Command="{Binding NavigateToTankDetails}">
+        <Button Background="Transparent">
             <Button.Padding>0</Button.Padding>
             <Button.Content>
                 <Panel Width="150" HorizontalAlignment="Left"
@@ -77,8 +77,7 @@
         </Button>
 
         <!-- PANEL 2-->
-        <Button Background="Transparent"
-                Command="{Binding NavigateToTankDetails}">
+        <Button Background="Transparent">
             <Button.Padding>0</Button.Padding>
             <Panel Width="150" HorizontalAlignment="Left"
                    VerticalAlignment="Top" Margin="10">
@@ -139,8 +138,7 @@
             </Panel>
         </Button>
         <!-- END PANEL 2 -->
-        <TextBlock x:Name="PathTextBlock" Foreground="White"
-                   Text="{Binding UrlPathSegment}" />
+        <TextBlock x:Name="PathTextBlock" Foreground="White" />
 
     </WrapPanel>
 </UserControl>
