--- a/Views/HomePageView.axaml
+++ b/Views/HomePageView.axaml
@@ -5,8 +5,7 @@
              xmlns:viewModels="clr-namespace:VibeOne.ViewModels"
              xmlns:avalonia="clr-namespace:Material.Icons.Avalonia;assembly=Material.Icons.Avalonia"
              mc:Ignorable="d" d:DesignWidth="740" d:DesignHeight="400"
-             x:Class="VibeOne.Views.HomePageView"
-             x:DataType="viewModels:HomePageViewModel">
+             x:Class="VibeOne.Views.HomePageView">
 
     <Design.DataContext>
         <viewModels:HomePageViewModel />
