--- a/Views/MainWindow.axaml
+++ b/Views/MainWindow.axaml
@@ -4,7 +4,8 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:avalonia="clr-namespace:Material.Icons.Avalonia;assembly=Material.Icons.Avalonia"
-        xmlns:reactiveUi="http://reactiveui.net"
+        xmlns:rx="http://reactiveui.net"
+        xmlns:local="clr-namespace:VibeOne"
         mc:Ignorable="d" d:DesignWidth="700" d:DesignHeight="400"
         x:Class="VibeOne.Views.MainWindow"
         x:DataType="vm:MainWindowViewModel"
@@ -37,7 +38,7 @@
                 <Panel>
                     <!-- NAVIGATION PANE OF SPLITVIEW -->
                     <StackPanel Orientation="Vertical" VerticalAlignment="Top">
-                        <Button Width="200" Background="Transparent" >
+                        <Button Width="200" Background="Transparent" Command="{Binding NavigateHome}" >
                             <Button.Content>
                                 <StackPanel Orientation="Horizontal">
                                     <avalonia:MaterialIcon Kind="Gauge"
@@ -78,14 +79,19 @@
                             </Button.Content>
                         </Button>
                     </StackPanel>
-
                 </Panel>
                 <!-- END NAV PANE -->
             </SplitView.Pane>
             <!-- SPLITVIEW CONTENT AREA -->
-            <!-- <reactiveUi:RoutedViewHost -->
-            <!--     x:Name="RoutedViewHost" Router="{Binding Router}"> -->
-            <!-- </reactiveUi:RoutedViewHost> -->
+            <rx:RoutedViewHost
+                x:Name="RoutedViewHost" Router="{Binding Router}">
+                <rx:RoutedViewHost.DefaultContent>
+                    <TextBlock Text="Default Content"></TextBlock>
+                </rx:RoutedViewHost.DefaultContent>
+                <rx:RoutedViewHost.ViewLocator>
+                    <local:ViewLocator />
+                </rx:RoutedViewHost.ViewLocator>
+            </rx:RoutedViewHost>
         </SplitView>
     </Panel>
 </Window>
